--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ h1 {
   background-color: #ecf0f1!important;
 }
 
-a {
+.navbar a {
 	color: #FFF !important;
 
 }
@@ -79,6 +79,7 @@ a {
 }
 
 .title1 {
+  margin-top: 20px;
   color: grey !important;
   font-size: 18px !important
 }
